FunxParser.py
# Generated from Funx.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class FunxParser ( Parser ):

    grammarFileName = "Funx.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'while'", "'<-'", "'^'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'{'", "'}'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "ASSIGN", "POWER", 
                      "PLUS", "MINUS", "TIMES", "DIVIDE", "MOD", "EQUAL", 
                      "NOTEQUAL", "GREATER", "LESS", "GREATEREQUAL", "LESSEQUAL", 
                      "LLI", "LLD", "PI", "PD", "NUM", "VAR", "ID", "WS", 
                      "COMENTARIO" ]

    RULE_root = 0
    RULE_function = 1
    RULE_parameters = 2
    RULE_instruction = 3
    RULE_conditional = 4
    RULE_loop = 5
    RULE_condition = 6
    RULE_assignation = 7
    RULE_expression = 8

    ruleNames =  [ "root", "function", "parameters", "instruction", "conditional", 
                   "loop", "condition", "assignation", "expression" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    ASSIGN=4
    POWER=5
    PLUS=6
    MINUS=7
    TIMES=8
    DIVIDE=9
    MOD=10
    EQUAL=11
    NOTEQUAL=12
    GREATER=13
    LESS=14
    GREATEREQUAL=15
    LESSEQUAL=16
    LLI=17
    LLD=18
    PI=19
    PD=20
    NUM=21
    VAR=22
    ID=23
    WS=24
    COMENTARIO=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FunxParser.EOF, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.FunctionContext)
            else:
                return self.getTypedRuleContext(FunxParser.FunctionContext,i)


        def expression(self):
            return self.getTypedRuleContext(FunxParser.ExpressionContext,0)


        def getRuleIndex(self):
            return FunxParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = FunxParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 18
                    self.function() 
                self.state = 23
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FunxParser.PI) | (1 << FunxParser.NUM) | (1 << FunxParser.VAR) | (1 << FunxParser.ID))) != 0):
                self.state = 24
                self.expression(0)


            self.state = 27
            self.match(FunxParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FunxParser.ID, 0)

        def parameters(self):
            return self.getTypedRuleContext(FunxParser.ParametersContext,0)


        def LLI(self):
            return self.getToken(FunxParser.LLI, 0)

        def LLD(self):
            return self.getToken(FunxParser.LLD, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.InstructionContext)
            else:
                return self.getTypedRuleContext(FunxParser.InstructionContext,i)


        def getRuleIndex(self):
            return FunxParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = FunxParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.match(FunxParser.ID)
            self.state = 30
            self.parameters()
            self.state = 31
            self.match(FunxParser.LLI)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.instruction()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FunxParser.IF) | (1 << FunxParser.WHILE) | (1 << FunxParser.PI) | (1 << FunxParser.NUM) | (1 << FunxParser.VAR) | (1 << FunxParser.ID))) != 0)):
                    break

            self.state = 37
            self.match(FunxParser.LLD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(FunxParser.VAR)
            else:
                return self.getToken(FunxParser.VAR, i)

        def getRuleIndex(self):
            return FunxParser.RULE_parameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = FunxParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FunxParser.VAR:
                self.state = 39
                self.match(FunxParser.VAR)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstructionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditional(self):
            return self.getTypedRuleContext(FunxParser.ConditionalContext,0)


        def loop(self):
            return self.getTypedRuleContext(FunxParser.LoopContext,0)


        def assignation(self):
            return self.getTypedRuleContext(FunxParser.AssignationContext,0)


        def expression(self):
            return self.getTypedRuleContext(FunxParser.ExpressionContext,0)


        def getRuleIndex(self):
            return FunxParser.RULE_instruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = FunxParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruction)
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.conditional()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.loop()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.assignation()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FunxParser.RULE_conditional

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfElseContext(ConditionalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ConditionalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(FunxParser.IF, 0)
        def condition(self):
            return self.getTypedRuleContext(FunxParser.ConditionContext,0)

        def LLI(self, i:int=None):
            if i is None:
                return self.getTokens(FunxParser.LLI)
            else:
                return self.getToken(FunxParser.LLI, i)
        def LLD(self, i:int=None):
            if i is None:
                return self.getTokens(FunxParser.LLD)
            else:
                return self.getToken(FunxParser.LLD, i)
        def ELSE(self):
            return self.getToken(FunxParser.ELSE, 0)
        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.InstructionContext)
            else:
                return self.getTypedRuleContext(FunxParser.InstructionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElse" ):
                return visitor.visitIfElse(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(ConditionalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ConditionalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(FunxParser.IF, 0)
        def condition(self):
            return self.getTypedRuleContext(FunxParser.ConditionContext,0)

        def LLI(self):
            return self.getToken(FunxParser.LLI, 0)
        def LLD(self):
            return self.getToken(FunxParser.LLD, 0)
        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.InstructionContext)
            else:
                return self.getTypedRuleContext(FunxParser.InstructionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)



    def conditional(self):

        localctx = FunxParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_conditional)
        self._la = 0 # Token type
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = FunxParser.IfElseContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(FunxParser.IF)
                self.state = 52
                self.condition()
                self.state = 53
                self.match(FunxParser.LLI)
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 54
                    self.instruction()
                    self.state = 57 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FunxParser.IF) | (1 << FunxParser.WHILE) | (1 << FunxParser.PI) | (1 << FunxParser.NUM) | (1 << FunxParser.VAR) | (1 << FunxParser.ID))) != 0)):
                        break

                self.state = 59
                self.match(FunxParser.LLD)
                self.state = 60
                self.match(FunxParser.ELSE)
                self.state = 61
                self.match(FunxParser.LLI)
                self.state = 63 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 62
                    self.instruction()
                    self.state = 65 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FunxParser.IF) | (1 << FunxParser.WHILE) | (1 << FunxParser.PI) | (1 << FunxParser.NUM) | (1 << FunxParser.VAR) | (1 << FunxParser.ID))) != 0)):
                        break

                self.state = 67
                self.match(FunxParser.LLD)
                pass

            elif la_ == 2:
                localctx = FunxParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.match(FunxParser.IF)
                self.state = 70
                self.condition()
                self.state = 71
                self.match(FunxParser.LLI)
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 72
                    self.instruction()
                    self.state = 75 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FunxParser.IF) | (1 << FunxParser.WHILE) | (1 << FunxParser.PI) | (1 << FunxParser.NUM) | (1 << FunxParser.VAR) | (1 << FunxParser.ID))) != 0)):
                        break

                self.state = 77
                self.match(FunxParser.LLD)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LoopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(FunxParser.WHILE, 0)

        def condition(self):
            return self.getTypedRuleContext(FunxParser.ConditionContext,0)


        def LLI(self):
            return self.getToken(FunxParser.LLI, 0)

        def LLD(self):
            return self.getToken(FunxParser.LLD, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.InstructionContext)
            else:
                return self.getTypedRuleContext(FunxParser.InstructionContext,i)


        def getRuleIndex(self):
            return FunxParser.RULE_loop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = FunxParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(FunxParser.WHILE)
            self.state = 82
            self.condition()
            self.state = 83
            self.match(FunxParser.LLI)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84
                self.instruction()
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FunxParser.IF) | (1 << FunxParser.WHILE) | (1 << FunxParser.PI) | (1 << FunxParser.NUM) | (1 << FunxParser.VAR) | (1 << FunxParser.ID))) != 0)):
                    break

            self.state = 89
            self.match(FunxParser.LLD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FunxParser.RULE_condition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class GreaterEqualContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)

        def GREATEREQUAL(self):
            return self.getToken(FunxParser.GREATEREQUAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGreaterEqual" ):
                return visitor.visitGreaterEqual(self)
            else:
                return visitor.visitChildren(self)


    class NotEqualContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)

        def NOTEQUAL(self):
            return self.getToken(FunxParser.NOTEQUAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotEqual" ):
                return visitor.visitNotEqual(self)
            else:
                return visitor.visitChildren(self)


    class EqualContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)

        def EQUAL(self):
            return self.getToken(FunxParser.EQUAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual" ):
                return visitor.visitEqual(self)
            else:
                return visitor.visitChildren(self)


    class LessEqualContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)

        def LESSEQUAL(self):
            return self.getToken(FunxParser.LESSEQUAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessEqual" ):
                return visitor.visitLessEqual(self)
            else:
                return visitor.visitChildren(self)


    class GreaterContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)

        def GREATER(self):
            return self.getToken(FunxParser.GREATER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGreater" ):
                return visitor.visitGreater(self)
            else:
                return visitor.visitChildren(self)


    class LessContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)

        def LESS(self):
            return self.getToken(FunxParser.LESS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLess" ):
                return visitor.visitLess(self)
            else:
                return visitor.visitChildren(self)



    def condition(self):

        localctx = FunxParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condition)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = FunxParser.EqualContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.expression(0)
                self.state = 92
                self.match(FunxParser.EQUAL)
                self.state = 93
                self.expression(0)
                pass

            elif la_ == 2:
                localctx = FunxParser.NotEqualContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.expression(0)
                self.state = 96
                self.match(FunxParser.NOTEQUAL)
                self.state = 97
                self.expression(0)
                pass

            elif la_ == 3:
                localctx = FunxParser.GreaterContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.expression(0)
                self.state = 100
                self.match(FunxParser.GREATER)
                self.state = 101
                self.expression(0)
                pass

            elif la_ == 4:
                localctx = FunxParser.LessContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.expression(0)
                self.state = 104
                self.match(FunxParser.LESS)
                self.state = 105
                self.expression(0)
                pass

            elif la_ == 5:
                localctx = FunxParser.GreaterEqualContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 107
                self.expression(0)
                self.state = 108
                self.match(FunxParser.GREATEREQUAL)
                self.state = 109
                self.expression(0)
                pass

            elif la_ == 6:
                localctx = FunxParser.LessEqualContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 111
                self.expression(0)
                self.state = 112
                self.match(FunxParser.LESSEQUAL)
                self.state = 113
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(FunxParser.VAR, 0)

        def ASSIGN(self):
            return self.getToken(FunxParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(FunxParser.ExpressionContext,0)


        def getRuleIndex(self):
            return FunxParser.RULE_assignation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignation" ):
                return visitor.visitAssignation(self)
            else:
                return visitor.visitChildren(self)




    def assignation(self):

        localctx = FunxParser.AssignationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(FunxParser.VAR)
            self.state = 118
            self.match(FunxParser.ASSIGN)
            self.state = 119
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FunxParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MultiplicationContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)

        def TIMES(self):
            return self.getToken(FunxParser.TIMES, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplication" ):
                return visitor.visitMultiplication(self)
            else:
                return visitor.visitChildren(self)


    class VariableContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(FunxParser.VAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)


    class ParentesisContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PI(self):
            return self.getToken(FunxParser.PI, 0)
        def expression(self):
            return self.getTypedRuleContext(FunxParser.ExpressionContext,0)

        def PD(self):
            return self.getToken(FunxParser.PD, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParentesis" ):
                return visitor.visitParentesis(self)
            else:
                return visitor.visitChildren(self)


    class ModulusContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)

        def MOD(self):
            return self.getToken(FunxParser.MOD, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModulus" ):
                return visitor.visitModulus(self)
            else:
                return visitor.visitChildren(self)


    class DivisionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)

        def DIVIDE(self):
            return self.getToken(FunxParser.DIVIDE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivision" ):
                return visitor.visitDivision(self)
            else:
                return visitor.visitChildren(self)


    class CallFunctionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(FunxParser.ID, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallFunction" ):
                return visitor.visitCallFunction(self)
            else:
                return visitor.visitChildren(self)


    class PlusContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)

        def PLUS(self):
            return self.getToken(FunxParser.PLUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlus" ):
                return visitor.visitPlus(self)
            else:
                return visitor.visitChildren(self)


    class ValorContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(FunxParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValor" ):
                return visitor.visitValor(self)
            else:
                return visitor.visitChildren(self)


    class PowerContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)

        def POWER(self):
            return self.getToken(FunxParser.POWER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPower" ):
                return visitor.visitPower(self)
            else:
                return visitor.visitChildren(self)


    class MinusContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExpressionContext,i)

        def MINUS(self):
            return self.getToken(FunxParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMinus" ):
                return visitor.visitMinus(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = FunxParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FunxParser.PI]:
                localctx = FunxParser.ParentesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 122
                self.match(FunxParser.PI)
                self.state = 123
                self.expression(0)
                self.state = 124
                self.match(FunxParser.PD)
                pass
            elif token in [FunxParser.ID]:
                localctx = FunxParser.CallFunctionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 126
                self.match(FunxParser.ID)
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 127
                        self.expression(0) 
                    self.state = 132
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                pass
            elif token in [FunxParser.NUM]:
                localctx = FunxParser.ValorContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 133
                self.match(FunxParser.NUM)
                pass
            elif token in [FunxParser.VAR]:
                localctx = FunxParser.VariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 134
                self.match(FunxParser.VAR)
                pass
            else:
                raise NoViableAltException(self)
